--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "~4.7.4",
+    "@ionic/storage": "^2.2.0",
     "cordova-android": "^8.0.0",
     "cordova-ios": "^5.0.1",
     "core-js": "^2.5.4",
