--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@angular/compiler-cli": "~8.2.3",
     "@angular/language-service": "~8.2.3",
     "@ionic/angular-toolkit": "^2.0.0",
+    "@ionic/lab": "2.0.11",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~12.0.0",
