--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "~4.7.4",
+    "@ionic/storage": "^2.2.0",
     "cordova-android": "^8.0.0",
     "cordova-ios": "^5.0.1",
     "core-js": "^2.5.4",
@@ -46,6 +47,7 @@
     "@angular/compiler-cli": "~8.2.3",
     "@angular/language-service": "~8.2.3",
     "@ionic/angular-toolkit": "^2.0.0",
+    "@ionic/lab": "2.0.11",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~12.0.0",
