--- a/src/ngsw-config.json
+++ b/src/ngsw-config.json
@@ -19,7 +19,11 @@
       "resources": {
         "files": [
           "/assets/**",
+          "/svg/**",
           "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"
+        ],
+        "urls": [
+          "https://cdn.jsdelivr.net/npm/pwacompat@2.0.9/pwacompat.min.js"
         ]
       }
     }
