--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build-selu-dev": "ionic build --prod -- --base-href=/external/webapp_test/turtlecoveapp/www/"
   },
   "private": true,
   "dependencies": {
