Updated to allow service worker to work at a directory other than the root directory on the serve.

--- a/firebase.json
+++ b/firebase.json
@@ -14,7 +14,7 @@
     ],
     "headers": [
       {
-        "source": "ngsw-worker.js",
+        "source": "/external/webapp_test/turtlecoveapp/www/ngsw-worker.js",
         "headers": [
           {
             "key": "Cache-Control",
