Fixed firebase ignore

--- a/firebase.json
+++ b/firebase.json
@@ -5,7 +5,7 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**",
-      "*.zip"
+      "**/*.zip"
     ],
     "rewrites": [
       {
