--- a/src/ngsw-config.json
+++ b/src/ngsw-config.json
@@ -7,7 +7,21 @@
       "updateMode": "prefetch",
       "resources": {
         "files": [
-          "/**"
+          "/favicon.ico",
+          "/index.html",
+          "/*.css",
+          "/*.js"
+        ]
+      }
+    }, {
+      "name": "assets",
+      "installMode": "prefetch",
+      "updateMode": "prefetch",
+      "resources": {
+        "files": [
+          "/assets/**",
+          "/svg/**",
+          "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"
         ],
         "urls": [
           "https://cdn.jsdelivr.net/npm/pwacompat@2.0.9/pwacompat.min.js"
