--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "private": true,
   "dependencies": {
     "@angular/common": "^8.2.3",
-    "@angular/core": "^8.2.3",
+    "@angular/core": "^8.2.14",
     "@angular/forms": "^8.2.3",
     "@angular/platform-browser": "^8.2.3",
     "@angular/platform-browser-dynamic": "^8.2.3",
@@ -42,7 +42,7 @@
     "@angular-devkit/build-angular": "^0.803.0",
     "@angular-devkit/core": "^8.3.0",
     "@angular-devkit/schematics": "^8.3.0",
-    "@angular/cli": "~8.3.0",
+    "@angular/cli": "^8.3.20",
     "@angular/compiler": "~8.2.3",
     "@angular/compiler-cli": "~8.2.3",
     "@angular/language-service": "~8.2.3",
