--- a/package.json
+++ b/package.json
@@ -15,60 +15,61 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^8.2.3",
-    "@angular/core": "^8.2.3",
-    "@angular/forms": "^8.2.3",
-    "@angular/platform-browser": "^8.2.3",
-    "@angular/platform-browser-dynamic": "^8.2.3",
-    "@angular/pwa": "~0.803.0",
-    "@angular/router": "^8.2.3",
-    "@angular/service-worker": "^8.2.3",
-    "@capacitor/android": "^1.2.0",
-    "@capacitor/cli": "^1.0.0",
-    "@capacitor/core": "^1.0.0",
-    "@capacitor/ios": "^1.2.0",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic/angular": "~4.7.4",
+    "@angular/common": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/pwa": "^0.803.20",
+    "@angular/router": "^8.2.14",
+    "@angular/service-worker": "^8.2.14",
+    "@capacitor/android": "^1.4.0",
+    "@capacitor/cli": "^1.4.0",
+    "@capacitor/core": "^1.4.0",
+    "@capacitor/ios": "^1.4.0",
+    "@ionic-native/core": "^5.18.0",
+    "@ionic/angular": "^4.11.7",
     "@ionic/storage": "^2.2.0",
-    "cordova-android": "^8.0.0",
-    "cordova-ios": "^5.0.1",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.5.1",
-    "tslib": "^1.9.0",
+    "cordova-android": "^8.1.0",
+    "cordova-ios": "^5.1.1",
+    "core-js": "^3.5.0",
+    "eslint": "^6.7.2",
+    "rxjs": "~6.5.3",
+    "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.803.0",
-    "@angular-devkit/build-angular": "^0.803.0",
-    "@angular-devkit/core": "^8.3.0",
-    "@angular-devkit/schematics": "^8.3.0",
-    "@angular/cli": "~8.3.0",
-    "@angular/compiler": "~8.2.3",
-    "@angular/compiler-cli": "~8.2.3",
-    "@angular/language-service": "~8.2.3",
-    "@ionic/angular-toolkit": "^2.0.0",
-    "@ionic/lab": "2.0.11",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~12.0.0",
-    "codelyzer": "^5.0.1",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^4.1.1",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "jasmine-core": "~2.99.1",
+    "@angular-devkit/architect": "^0.803.20",
+    "@angular-devkit/build-angular": "^0.803.20",
+    "@angular-devkit/core": "^8.3.20",
+    "@angular-devkit/schematics": "^8.3.20",
+    "@angular/cli": "^8.3.20",
+    "@angular/compiler": "^8.2.14",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
+    "@ionic/angular-toolkit": "^2.1.1",
+    "@ionic/lab": "2.0.18",
+    "@types/jasmine": "~3.5.0",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "~12.12.17",
+    "codelyzer": "^5.2.0",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.1.3",
+    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~5.17.0",
-    "typescript": "~3.5.3"
+    "karma": "~4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "~5.4.2",
+    "ts-node": "~8.5.4",
+    "tslint": "~5.20.1",
+    "typescript": "~3.5.0"
   },
   "description": "An Ionic project",
   "cordova": {
