--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.803.20",
-    "@angular-devkit/build-angular": "^0.803.20",
+    "@angular-devkit/build-angular": "^0.803.23",
     "@angular-devkit/core": "^8.3.20",
     "@angular-devkit/schematics": "^8.3.20",
     "@angular/cli": "^8.3.20",
@@ -48,7 +48,7 @@
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
     "@ionic/angular-toolkit": "^2.1.1",
-    "@ionic/lab": "2.0.18",
+    "@ionic/lab": "^3.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "~12.12.17",
