--- a/package.json
+++ b/package.json
@@ -15,20 +15,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/pwa": "^0.803.20",
-    "@angular/router": "^8.2.14",
-    "@angular/service-worker": "^8.2.14",
+    "@angular/common": "^9.0.0-rc.11",
+    "@angular/core": "^9.0.0-rc.11",
+    "@angular/forms": "^9.0.0-rc.11",
+    "@angular/platform-browser": "^9.0.0-rc.11",
+    "@angular/platform-browser-dynamic": "^9.0.0-rc.11",
+    "@angular/router": "^9.0.0-rc.11",
+    "@angular/service-worker": "^9.0.0-rc.11",
     "@capacitor/android": "^1.4.0",
     "@capacitor/cli": "^1.4.0",
     "@capacitor/core": "^1.4.0",
     "@capacitor/ios": "^1.4.0",
     "@ionic-native/core": "^5.18.0",
-    "@ionic/angular": "^4.11.7",
+    "@ionic/angular": "^4.11.10",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "^8.1.0",
     "cordova-ios": "^5.1.1",
@@ -36,23 +35,23 @@
     "eslint": "^6.7.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.803.20",
-    "@angular-devkit/build-angular": "^0.803.23",
-    "@angular-devkit/core": "^8.3.20",
-    "@angular-devkit/schematics": "^8.3.20",
-    "@angular/cli": "^8.3.23",
-    "@angular/compiler": "^8.2.14",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular-devkit/build-angular": "~0.900.0-rc.11",
+    "@angular-devkit/core": "^9.0.0-rc.11",
+    "@angular-devkit/schematics": "^9.0.0-rc.11",
+    "@angular/cli": "^9.0.0-rc.11",
+    "@angular/compiler": "^9.0.0-rc.11",
+    "@angular/compiler-cli": "^9.0.0-rc.11",
+    "@angular/language-service": "^9.0.0-rc.11",
     "@ionic/angular-toolkit": "^2.1.1",
     "@ionic/lab": "^3.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "~12.12.17",
-    "codelyzer": "^5.2.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
@@ -69,7 +68,7 @@
     "protractor": "~5.4.2",
     "ts-node": "~8.5.4",
     "tslint": "~5.20.1",
-    "typescript": "~3.5.0"
+    "typescript": "~3.7.5"
   },
   "description": "An Ionic project",
   "cordova": {
