--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@capacitor/core": "^1.4.0",
     "@capacitor/ios": "^1.4.0",
     "@ionic-native/core": "^5.18.0",
-    "@ionic/angular": "^4.11.10",
+    "@ionic/angular": "^5.0.0-rc.1",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "^8.1.0",
     "cordova-ios": "^5.1.1",
